--- a/package.json
+++ b/package.json
@@ -8,22 +8,27 @@
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "gatsby": "^4.0.0",
     "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-purgecss": "^6.1.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sass": "^5.1.0",
     "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-source-contentful": "^6.0.0",
+    "gatsby-sonurce-contentful": "^6.0.0",
     "gatsby-transformer-remark": "^5.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.21",
+    "lodash-webpack-plugin": "^0.11.6",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
-    "contentful-import": "^7.8.6",
-    "netlify-cli": "^2.54.0"
+    "prettier": "^2.0.5"
   },
   "engines": {
     "node": ">=14.0.0"
