--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-sass": "^5.1.0",
     "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-sonurce-contentful": "^6.0.0",
+    "gatsby-source-contentful": "^6.0.0",
     "gatsby-transformer-remark": "^5.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "gh-pages": "^3.1.0",
@@ -28,7 +28,9 @@
     "yarn": "^1.22.17"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "contentful-import": "^7.8.6",
+    "netlify-cli": "^2.54.0"
   },
   "engines": {
     "node": ">=14.0.0"
