--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bulma": "^0.9.3",
     "gatsby": "^4.0.0",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-gtag": "^4.1.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-purgecss": "^6.1.0",
