--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "bulma": "^0.9.3",
     "gatsby": "^4.0.0",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-gtag": "^4.1.0",
     "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-mdx": "^3.1.3",
+    "gatsby-plugin-offline": "^5.1.3",
     "gatsby-plugin-purgecss": "^6.1.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-sass": "^5.1.0",
     "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-remark-embed-video": "^3.1.1",
+    "gatsby-remark-responsive-iframe": "^5.1.0",
     "gatsby-source-contentful": "^6.0.0",
+    "gatsby-source-filesystem": "^4.1.2",
     "gatsby-transformer-remark": "^5.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "gh-pages": "^3.1.0",
@@ -26,6 +33,7 @@
     "lodash-webpack-plugin": "^0.11.6",
     "node-sass": "^6.0.1",
     "npm": "^8.1.3",
+    "plugin": "^0.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
