--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "^10.4.0",
     "bulma": "^0.9.3",
+    "color": "^4.0.1",
     "gatsby": "^4.0.0",
+    "gatsby-legacy-polyfills": "^2.1.0",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-gtag": "^4.1.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-mdx": "^3.1.3",
     "gatsby-plugin-offline": "^5.1.3",
+    "gatsby-plugin-postcss": "^5.1.0",
     "gatsby-plugin-purgecss": "^6.1.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sass": "^5.1.0",
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-remark-embed-video": "^3.1.1",
@@ -27,6 +32,7 @@
     "gatsby-source-filesystem": "^4.1.2",
     "gatsby-transformer-remark": "^5.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
+    "gatsby-transformer-yaml": "^4.1.0",
     "gh-pages": "^3.1.0",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
@@ -34,9 +40,13 @@
     "node-sass": "^6.0.1",
     "npm": "^8.1.3",
     "plugin": "^0.3.3",
+    "postcss": "^8.3.11",
+    "postcss-input-range": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
+    "tailwindcss": "^2.2.19",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
@@ -49,9 +59,10 @@
   },
   "homepage": "https://github.com/contentful/starter-gatsby-blog#readme",
   "keywords": [
-    "gatsby",
-    "contentful",
-    "starter"
+    "nohelps",
+    "personal",
+    "website",
+    "nohelp"
   ],
   "license": "MIT",
   "main": "n/a",
