--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "contentful-starter-gatsby-blog",
-  "description": "Contentful Gatsby Starter Blog",
+  "name": "NoHelps",
+  "description": "no helps personal nlogger",
   "private": true,
   "version": "0.0.1",
-  "author": "Contentful <opensource@contentful.com>",
+  "author": "Abinesh S",
   "bugs": {
-    "url": "https://github.com/contentful/starter-gatsby-blog/issues"
+    "url": "https://github.com/abinesh1006/nohelps-contentful-ap"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "autoprefixer": "^10.4.0",
     "bulma": "^0.9.3",
-    "color": "^4.0.1",
+    "color": "^4.0.2",
+    "formik": "^2.2.9",
     "gatsby": "^4.0.0",
-    "gatsby-legacy-polyfills": "^2.1.0",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-gtag": "^4.1.0",
     "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-mdx": "^3.1.3",
+    "gatsby-plugin-nprogress": "^4.2.0",
     "gatsby-plugin-offline": "^5.1.3",
-    "gatsby-plugin-postcss": "^5.1.0",
+    "gatsby-plugin-page-creator": "^4.2.0",
     "gatsby-plugin-purgecss": "^6.1.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-sass": "^5.1.0",
+    "gatsby-plugin-sass": "^5.2.0",
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-remark-embed-video": "^3.1.1",
     "gatsby-remark-responsive-iframe": "^5.1.0",
     "gatsby-source-contentful": "^6.0.0",
-    "gatsby-source-filesystem": "^4.1.2",
+    "gatsby-source-filesystem": "^4.2.0",
     "gatsby-transformer-remark": "^5.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
-    "gatsby-transformer-yaml": "^4.1.0",
+    "gatsby-transformer-yaml": "^4.2.0",
     "gh-pages": "^3.1.0",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
@@ -40,14 +40,17 @@
     "node-sass": "^6.0.1",
     "npm": "^8.1.3",
     "plugin": "^0.3.3",
-    "postcss": "^8.3.11",
-    "postcss-input-range": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.0.2",
+    "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19",
-    "yarn": "^1.22.17"
+    "tokens": "^0.0.8",
+    "yarn": "^1.22.17",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "contentful-import": "^7.8.6",
@@ -59,10 +62,9 @@
   },
   "homepage": "https://github.com/contentful/starter-gatsby-blog#readme",
   "keywords": [
-    "nohelps",
-    "personal",
-    "website",
-    "nohelp"
+    "gatsby",
+    "contentful",
+    "starter"
   ],
   "license": "MIT",
   "main": "n/a",
