--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
+    "react-share": "^4.4.0",
     "tailwindcss": "^2.2.19",
     "tokens": "^0.0.8",
     "yarn": "^1.22.17",
